--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* background-image: url('https://st.depositphotos.com/2459687/4663/v/450/depositphotos_46630063-stock-illustration-funny-animal-seamless-vector-pattern.jpg'); */
+  /* background-image: url('https://media.istockphoto.com/photos/gray-doggy-tile-pattern-repeat-background-picture-id490747664?b=1&k=20&m=490747664&s=170667a&w=0&h=ca0K-dWeUfVBRk9nRwMmcsKXd-RStz_BbEXfJ-oTzdw='); */
+   background-image: url('https://images.assetsdelivery.com/compings_v2/kannaa123rf/kannaa123rf1405/kannaa123rf140500187.jpg'); 
+  font-family: 'Oswald', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
