--- a/client/src/componets/details.css
+++ b/client/src/componets/details.css
@@ -1,21 +1,28 @@
 .cardContainer{
-    background: rgb(129, 255, 238);
+    background: linear-gradient(to left,rgba(16, 106, 240, 0.9),#2ff5d4);
     display: flex;
     flex-direction: column;
     align-content: center;
     align-items: center;
     margin: 0 auto; /* Centramos el formulario */
-    width:50%;   /* Sin ancho no podemos centrar el formulario */
-    background-color: rgb(133, 245, 236); /* Color blanco para el formulario */
+    width:450px;   /* Sin ancho no podemos centrar el formulario */
     padding: 2px; /* separamos los bordes del form del resto de elementos */
     border-radius: 10px; /* Redondeamos los bordes del form */
 }
 .imgDet{
-    margin-top: 5px;
+   
+   border-top-left-radius: 10px;
+   border-top-right-radius: 10px;
+    max-width: 450px;
 }
-
+.description h4{
+    margin: 3px;
+}
+.description h3{
+    margin: 3px;
+}
 .header{
-    background: linear-gradient(to right,rgba(0, 255, 85, 0.8),#08e9b8);
+   
     width: 100%;
     border-radius: 10px; /* Redondeamos los bordes del form */
 }
@@ -27,7 +34,8 @@
     color: #fff;
     text-align: center;
     background: linear-gradient(to left,rgba(92, 6, 126, 0.9),#b700ff);
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
     text-decoration: none;
     padding: 10px 5px;
 }
