--- a/client/src/componets/home.css
+++ b/client/src/componets/home.css
@@ -1,11 +1,13 @@
 .container{
     display: flex;
     flex-direction: column;
+ 
     height: 100%;
     width: 100%;
     background: linear-gradient(to left,rgba(0, 255, 213, 0.986),#b700ff);
 }
 .nav{
+    display: flex;
     background: linear-gradient(to right,rgba(0, 255, 213, 0.986),#b700ff);
     margin: 0;
     padding: 0;
@@ -80,6 +82,7 @@ h1{
   height: 50%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-content: space-between;
   justify-content:space-around;
   
